--- a/Rewrite/Coolapk.conf
+++ b/Rewrite/Coolapk.conf
@@ -1,3 +1,3 @@
 hostname = api.coolapk.com
 # 酷安去首页广告、信息流广告、评论广告@ddgksf2021
-^https?:\/\/api.coolapk.com\/v6\/(feed\/(replyList|detail)|main\/indexV8|dataList) url script-response-body https://codeberg.org/ddgksf2013/Cuttlefish/raw/branch/master/Script/coolapk.js
+^https?:\/\/api.coolapk.com\/v6\/(feed\/(replyList|detail)|main\/indexV8|dataList) url script-response-body https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Script/coolapk.js
