--- a/Rewrite/12306.conf
+++ b/Rewrite/12306.conf
@@ -1,4 +1,11 @@
 hostname = ad.12306.cn
-# 12306 去除倒计时@ddgksf2013
-# 请检查你的分流是否有ad.12306.cn，如果有，需要去除（可使用解析器排出#out=12306），不然重写是无法生效的，同时检查是否有与其冲突的重写
+/*
+12306 去除倒计时@ddgksf2013
+
+请检查你的分流是否有ad.12306.cn，如果有，需要去除（可使用解析器排出#out=12306），不然重写是无法生效的，同时检查是否有与其冲突的重写
+
+或者在本地[filter_loca]下添加
+host, ad.12306.cn, direct
+
+*/
 ^https?:\/\/ad\.12306\.cn\/ad\/ser\/getAdList url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/12306.js
