--- a/Rewrite/BingPoint.conf
+++ b/Rewrite/BingPoint.conf
@@ -1,3 +1,3 @@
 hostname = rewards.bing.com
 # Bing积分@lowking
-^https:\/\/rewards\.bing\.com url script-request-header bing.js https://raw.githubusercontent.com/lowking/Scripts/master/bing/bingPoint.js
+^https:\/\/rewards\.bing\.com url script-request-header https://raw.githubusercontent.com/lowking/Scripts/master/bing/bingPoint.js
