--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -15,10 +15,10 @@ dns-direct-fallback-proxy = true
 
 
 [Proxy Group]
-🌐 全球加速 = select, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, DIRECT, interval=600, timeout=5, select=1, url=http://www.gstatic.com/generate_204
-🍎 苹果服务 = select, 🌐 全球加速, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, select=0
+🌐 全球加速 = select, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, Proxy, DIRECT, interval=600, timeout=5, select=1, url=http://www.gstatic.com/generate_204
+🍎 苹果服务 = select, DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, Proxy, select=0
 📽 港台番剧 = select, DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, select=0
-🎬 国际媒体 = select, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, select=0
+🎬 国际媒体 = select, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, Proxy, select=0
 🇭🇰 香港节点 = url-test, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
 🇨🇳 台湾节点 = url-test, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
 🇯🇵 日本节点 = url-test, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
@@ -26,7 +26,7 @@ dns-direct-fallback-proxy = true
 🇸🇬 狮城节点 = url-test, interval=600, tolerance=100, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$
 🇺🇲 美国节点 = url-test, interval=600, tolerance=100, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$
 🇬🇧 英国节点 = url-test, interval=600, tolerance=100, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰
-🐟 漏网之鱼 = select, 🌐 全球加速, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, DIRECT, interval=600, timeout=5, select=0, url=http://www.gstatic.com/generate_204
+🐟 漏网之鱼 = select, 🌐 全球加速, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, Proxy, DIRECT, interval=600, timeout=5, select=0, url=http://www.gstatic.com/generate_204
 
 [Rule]
 # 规则修正
