--- a/clash.ini
+++ b/clash.ini
@@ -16,7 +16,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🎬 哔哩哔哩`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
+custom_proxy_group=🎬 哔哩哔哩`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=🎬 国际媒体`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇰🇷 🇸🇬 狮城节点
 custom_proxy_group=🎮 游戏平台`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇰🇷 🇸🇬 狮城节点
 custom_proxy_group=🍎 苹果服务`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇰🇷 🇸🇬 狮城节点
