--- a/clash.ini
+++ b/clash.ini
@@ -1,5 +1,14 @@
 [custom]
 ;设置规则标志位
+- IP-CIDR,192.168.0.0/16,DIRECT, no-resolve
+- IP-CIDR,10.0.0.0/8,DIRECT, no-resolve
+- IP-CIDR,172.16.0.0/12,DIRECT, no-resolve
+- IP-CIDR,127.0.0.0/8,DIRECT, no-resolve
+- IP-CIDR,100.64.0.0/10,DIRECT, no-resolve
+- IP-CIDR,224.0.0.0/4,DIRECT, no-resolve
+- IP-CIDR,fe80::/10,DIRECT, no-resolve
+- IP-CIDR,119.28.28.28/32,DIRECT, no-resolve
+- IP-CIDR,182.254.116.0/24,DIRECT, no-resolve
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
 ruleset=🇹🇼 台湾节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
