--- a/clash.ini
+++ b/clash.ini
@@ -18,11 +18,11 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🎬 哔哩哔哩`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=🎬 国际媒体`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
-custom_proxy_group=🎮 游戏平台`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
-custom_proxy_group=🍎 苹果服务`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
-custom_proxy_group=🧩 微软服务`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
+custom_proxy_group=🧩 微软服务`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
 custom_proxy_group=🌏 国外网站`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
-custom_proxy_group=🌏 国内网站`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
+custom_proxy_group=🌏 国内网站`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT`[]🚀 手动切换
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
 custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|(?i)Hong))^((?!(台|日本|韩|新|美)).)*$`http://www.gstatic.com/generate_204`30,,50
