--- a/Rule/StackOverflow.yaml
+++ b/Rule/StackOverflow.yaml
@@ -1,3 +1,4 @@
-DOMAIN-SUFFIX,stackoverflow.com
-DOMAIN-SUFFIX,sstatic.net
-IP-CIDR,91.108.56.142/32,no-resolve
+payload:
+  - DOMAIN-SUFFIX,stackoverflow.com
+  - DOMAIN-SUFFIX,sstatic.net
+  - IP-CIDR,91.108.56.142/32,no-resolve
