--- a/Rewrite/AliYunPanCheckIn.conf
+++ b/Rewrite/AliYunPanCheckIn.conf
@@ -1,3 +1,3 @@
 hostname = auth.aliyundrive.com
 # 阿里云盘签到@lowking
-^https:\/\/auth\.aliyundrive.com\/v2\/account\/token url script-response-body https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js
+^https:\/\/auth.(aliyundrive|alipan).com\/v2\/account\/token url script-response-body https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js
