--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -29,6 +29,10 @@ dns-direct-fallback-proxy = true
 🐟 漏网之鱼 = select, 🌐 全球加速, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇸 美国节点, 🇬🇧 英国节点, Proxy, DIRECT, interval=600, timeout=5, select=0, url=http://www.gstatic.com/generate_204
 
 [Rule]
+# Youtube屏蔽UDP
+AND,((DOMAIN-SUFFIX,googlevideo.com), (PROTOCOL,UDP)),REJECT
+AND,((DOMAIN,youtubei.googleapis.com), (PROTOCOL,UDP)),REJECT
+
 # 规则修正
 RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Direct/Direct.list, DIRECT
 # 广告拦截
@@ -65,5 +69,17 @@ GEOIP,CN, DIRECT
 FINAL, 🐟 漏网之鱼
 
 [URL Rewrite]
-^https?://(www.)?g.cn https://www.google.com 302
-^https?://(www.)?google.cn https://www.google.com 302
+# ======= 视频广告请求 ======= #
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 302 
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
+
+# ======= 通用广告请求 ======= #
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
+
+# 请开启 MITM 并在域名中加入 www.google.cn
+^https?://(www.)?(g|google).cn https://www.google.com 302
+
+[MITM]
+hostname = -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, -www.google.com
