--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -82,4 +82,4 @@ FINAL, 🐟 漏网之鱼
 ^https?://(www.)?(g|google).cn https://www.google.com 302
 
 [MITM]
-hostname = -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, -www.google.com
+hostname = -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, -www.google.com, www.google.cn
