--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -17,7 +17,7 @@ dns-direct-fallback-proxy = true
 [Proxy Group]
 🌐 全球加速 = select, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇸 美国节点, 🇬🇧 英国节点, Proxy, DIRECT, interval=600, timeout=5, select=7, url=http://www.gstatic.com/generate_204
 🍎 苹果服务 = select, DIRECT, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇸 美国节点, 🇬🇧 英国节点, Proxy, select=0
-📽 哔哩哔哩 = select, DIRECT, 🇭🇰 香港节点, 🇹🇼 台湾节点, select=0
+📺 哔哩哔哩 = select, DIRECT, 🇭🇰 香港节点, 🇹🇼 台湾节点, select=0
 🎬 国际媒体 = select, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 🇸🇬 狮城节点, 🇺🇸 美国节点, 🇬🇧 英国节点, Proxy, select=0
 🇭🇰 香港节点 = url-test, interval=600, tolerance=50, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
 🇹🇼 台湾节点 = url-test, interval=600, tolerance=50, timeout=5, select=0, url=http://www.gstatic.com/generate_204, policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
@@ -51,11 +51,11 @@ RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/
 RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GoogleVoice/GoogleVoice.list, 🇺🇸 美国节点
 # 巴哈姆特
 RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bahamut/Bahamut.list, 🇹🇼 台湾节点
+# 港台番剧
+RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list, 📺 哔哩哔哩
 # 国际媒体
 RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list, 🎬 国际媒体
 DOMAIN-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list, 🎬 国际媒体
-# 港台番剧
-RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list, 📽 哔哩哔哩
 # 苹果服务
 RULE-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list, 🍎 苹果服务
 DOMAIN-SET, https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list, 🍎 苹果服务
