--- a/Rule/Emby.yaml
+++ b/Rule/Emby.yaml
@@ -5,6 +5,7 @@ payload:
   - DOMAIN-SUFFIX,blueseacdn.com
   - DOMAIN-SUFFIX,blueseamusics.com
   - DOMAIN-SUFFIX,coemn.com
+  - DOMAIN-SUFFIX,carryz.net
   - DOMAIN,bsem.ddns.me
   - DOMAIN-SUFFIX,embyplus.org
   - DOMAIN-SUFFIX,9521732.xyz
