--- a/Rule/Emby.yaml
+++ b/Rule/Emby.yaml
@@ -10,3 +10,5 @@ payload:
   - DOMAIN-SUFFIX,embyplus.org
   - DOMAIN-SUFFIX,9521732.xyz
   - DOMAIN-SUFFIX,chirsemby.top
+  - DOMAIN-SUFFIX,pilipiliultra.com
+  - DOMAIN-SUFFIX,pilipiliultra.top
