--- a/clash.ini
+++ b/clash.ini
@@ -3,8 +3,8 @@
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
 ruleset=🇹🇼 台湾节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
+ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=🎬 国际媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
-ruleset=🎬 哔哩哔哩,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
 ruleset=🧩 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
@@ -17,7 +17,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🎬 哔哩哔哩`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
+custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点
 custom_proxy_group=🎬 国际媒体`select`[]🚀 手动切换`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点
