--- a/Rewrite/Oray.conf
+++ b/Rewrite/Oray.conf
@@ -7,3 +7,4 @@ hostname = client-api-v2.oray.com
 ^https:\/\/client-api-v2\.oray\.com\/materials\/SUNLOGIN_CLIENT_IOS_PROMOTION url reject-dict
 #向日葵 #首页横幅广告
 ^https:\/\/client-api-v2\.oray\.com\/materials\/SLCC_iOS_DEVICE_FR url reject-dict
+^https:\/\/client-api-v2\.oray\.com\/materials\/SLCC_iOS_DEVICE_LIST_ADV url reject-dict
