--- a/Rule/Emby.yaml
+++ b/Rule/Emby.yaml
@@ -2,6 +2,7 @@ payload:
   - DOMAIN-SUFFIX,misakaf.org
   - DOMAIN-SUFFIX,loseremby.org
   - DOMAIN-SUFFIX,xmsl.org
+  - DOMAIN-SUFFIX,emby.moe
   - DOMAIN-SUFFIX,blueseacdn.com
   - DOMAIN-SUFFIX,blueseamusics.com
   - DOMAIN-SUFFIX,coemn.com
