--- a/Rule/Emby.yaml
+++ b/Rule/Emby.yaml
@@ -13,3 +13,4 @@ payload:
   - DOMAIN-SUFFIX,chirsemby.top
   - DOMAIN-SUFFIX,pilipiliultra.com
   - DOMAIN-SUFFIX,pilipiliultra.top
+  - DOMAIN-SUFFIX,pilipili.club
