--- a/Rewrite/XiaoHeiHe.conf
+++ b/Rewrite/XiaoHeiHe.conf
@@ -10,7 +10,7 @@
 # 开屏广告
 ^https:\/\/api\.xiaoheihe\.cn\/account\/get_ads_info_v2 url reject-dict
 # 移除热点板块信息流广告
-^https:\/\/api\.xiaoheihe\.cn\/bbs\/app\/feeds\/news url script-response-body https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Resource/Script/XiaoHeiHe/XiaoHeiHe_remove_ads.js
+^https:\/\/api\.xiaoheihe\.cn\/bbs\/app\/feeds\/news url script-response-body https://kelee.one/Resource/Script/XiaoHeiHe/XiaoHeiHe_remove_ads.js
 
 [Mitm]
 hostname = api.xiaoheihe.cn
