--- a/Rewrite/Oray.conf
+++ b/Rewrite/Oray.conf
@@ -1,9 +1,121 @@
+# ───── 开屏/广告屏蔽 ─────
+
+# 开屏广告：mobads.baidu.com
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?mobads\.baidu\.com.* url reject-dict
+
+# 友盟相关
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?cnlogs\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?errlog\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?errnewlog\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?ucc\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?ulogs\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?utoken\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?deeplink\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?aspect-upush\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?plbslog\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?log\.umtrack\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?aaid\.umeng\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?log\.umsns\.com.* url reject-dict
+
+# ───── 字节跳动相关广告 ─────
+
+# 规则：DOMAIN-KEYWORD, -ad- 与 DOMAIN-SUFFIX, byteimg.com
+^https?:\/\/(?=[^\/]*-ad-)(?:[a-zA-Z0-9_.-]+\.)?byteimg\.com.* url reject-dict
+
+# DOMAIN-KEYWORD, -ttam- 与 DOMAIN-SUFFIX, ibyteimg.com
+^https?:\/\/(?=[^\/]*-ttam-)(?:[a-zA-Z0-9_.-]+\.)?ibyteimg\.com.* url reject-dict
+
+# DOMAIN-KEYWORD, ssdk- 与 DOMAIN-SUFFIX, pangle.io
+^https?:\/\/(?=[^\/]*ssdk-)(?:[a-zA-Z0-9_.-]+\.)?pangle\.io.* url reject-dict
+
+# DOMAIN-KEYWORD, pangolin 与 DOMAIN-SUFFIX, sgsnssdk.com
+^https?:\/\/(?=[^\/]*pangolin)(?:[a-zA-Z0-9_.-]+\.)?sgsnssdk\.com.* url reject-dict
+
+# 同时包含关键词：lf 与 -short.bytetos.com
+^https?:\/\/(?=[^\/]*lf)(?=[^\/]*-short\.bytetos\.com).* url reject-dict
+
+# 同时包含关键词：v 与 -be-pack.pglstatp-toutiao.com
+^https?:\/\/(?=[^\/]*v)(?=[^\/]*-be-pack\.pglstatp-toutiao\.com).* url reject-dict
+
+# 同时包含关键词：sf 与 -be-pack.pglstatp-toutiao.com
+^https?:\/\/(?=[^\/]*sf)(?=[^\/]*-be-pack\.pglstatp-toutiao\.com).* url reject-dict
+
+# 同时包含关键词：s 与 -fe-scm.pglstatp-toutiao.com
+^https?:\/\/(?=[^\/]*s)(?=[^\/]*-fe-scm\.pglstatp-toutiao\.com).* url reject-dict
+
+# 同时包含关键词：sf 与 -ttcdn-tos.pstatp.com
+^https?:\/\/(?=[^\/]*sf)(?=[^\/]*-ttcdn-tos\.pstatp\.com).* url reject-dict
+
+# 同时包含关键词：sf 与 -fe-tos.pglstatp-toutiao.com
+^https?:\/\/(?=[^\/]*sf)(?=[^\/]*-fe-tos\.pglstatp-toutiao\.com).* url reject-dict
+
+# 同时包含关键词：sf 与 -static.i18n-pglstatp.com
+^https?:\/\/(?=[^\/]*sf)(?=[^\/]*-static\.i18n-pglstatp\.com).* url reject-dict
+
+# 同时包含关键词：if 与 -cdn-tos.bytescm.com
+^https?:\/\/(?=[^\/]*if)(?=[^\/]*-cdn-tos\.bytescm\.com).* url reject-dict
+
+# 同时包含关键词：if 与 -analytics.bytescm.com
+^https?:\/\/(?=[^\/]*if)(?=[^\/]*-analytics\.bytescm\.com).* url reject-dict
+
+# 同时包含关键词：lf 与 -analytics.bytescm.com
+^https?:\/\/(?=[^\/]*lf)(?=[^\/]*-analytics\.bytescm\.com).* url reject-dict
+
+# ───── 其它 AND 规则 ─────
+
+# 同时包含关键词：ads 与 normal，且域名以 zijieapi.com 结尾
+^https?:\/\/(?=[^\/]*ads)(?=[^\/]*normal)(?:[a-zA-Z0-9_.-]+\.)?zijieapi\.com.* url reject-dict
+
+# 同时包含关键词：api 与 -access-，且域名以 pangle.io 结尾
+^https?:\/\/(?=[^\/]*api)(?=[^\/]*-access-)(?:[a-zA-Z0-9_.-]+\.)?pangle\.io.* url reject-dict
+
+# 同时包含关键词：api 与 -log-，且域名以 pangle.io 结尾
+^https?:\/\/(?=[^\/]*api)(?=[^\/]*-log-)(?:[a-zA-Z0-9_.-]+\.)?pangle\.io.* url reject-dict
+
+# 同时包含关键词：api 与 -dual-event-，且域名以 pangle.io 结尾
+^https?:\/\/(?=[^\/]*api)(?=[^\/]*-dual-event-)(?:[a-zA-Z0-9_.-]+\.)?pangle\.io.* url reject-dict
+
+# 同时包含关键词：api 与 pangolin，且域名以 sgsnssdk.com 结尾
+^https?:\/\/(?=[^\/]*api)(?=[^\/]*pangolin)(?:[a-zA-Z0-9_.-]+\.)?sgsnssdk\.com.* url reject-dict
+
+# 同时包含关键词：ads 与 -normal-lq，且域名以 zijieapi.com 结尾
+^https?:\/\/(?=[^\/]*ads)(?=[^\/]*-normal-lq)(?:[a-zA-Z0-9_.-]+\.)?zijieapi\.com.* url reject-dict
+
+# ───── URL-REGEX 规则 ─────
+
+^http:\/\/p\d+-be-pack-sign\.pglstatp-toutiao\.com\/(ad-app-package|web\.business\.image)\/ url reject-dict
+
+# ───── 其它广告屏蔽域名 ─────
+
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?mon\.zijieapi\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?lf-ad-ies\.bytecdn\.cn.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?i\.snssdk\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?is\.snssdk\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?bds\.snssdk\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?dm\.bytedance\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?dm\.pstatp\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?dm\.toutiao\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?log\.snssdk\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?s3a\.pstatp\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?sdfp\.snssdk\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?tosv\.boe\.byted\.org.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?tosv\.byted\.org.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?extlog\.snssdk\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?mssdk-bu\.bytedance\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?toblog\.ctobsnssdk\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?mssdk\.volces\.com.* url reject-dict
+^https?:\/\/(?:[a-zA-Z0-9_.-]+\.)?pangolin\.snssdk\.com.* url reject-dict
+
+# 包含特定关键词的规则（DOMAIN-KEYWORD 类型）
+^https?:\/\/(?=[^\/]*-ad-sign\.byteimg\.com).* url reject-dict
+^https?:\/\/(?=[^\/]*api-access\.pangolin\-sdk\-toutiao).* url reject-dict
+^https?:\/\/(?=[^\/]*log-api\.pangolin\-sdk\-toutiao).* url reject-dict
+^https?:\/\/(?=[^\/]*-ad\.byteoversea\.com).* url reject-dict
+^https?:\/\/(?=[^\/]*video-cn\.snssdk\.com).* url reject-dict
+^https?:\/\/(?=[^\/]*asiad\.byteactivity).* url reject-dict
+
+# ───── 首页横幅广告（Rewrite） ─────
+
+^https:\/\/client-api-v2\.oray\.com\/materials\/SLCC_iOS_DEVICE_FREE\? url reject-dict
+
 hostname = client-api-v2.oray.com
-#向日葵 #开屏广告
-^https:\/\/client-api-v2\.oray\.com\/materials\/SLCC_IOS_STARTUP url reject-dict
-#向日葵 #首页文字广告
-^https:\/\/client-api-v2\.oray\.com\/materials\/SLCC_IOS_DEVICE url reject-dict
-#向日葵 #发现页广告
-^https:\/\/client-api-v2\.oray\.com\/materials\/SUNLOGIN_CLIENT_IOS_PROMOTION url reject-dict
-#向日葵 #首页横幅广告
-^https:\/\/client-api-v2\.oray\.com\/materials\/SLCC_iOS_DEVICE_FR url reject-dict
