--- a/Rewrite/XiaoHeiHe.conf
+++ b/Rewrite/XiaoHeiHe.conf
@@ -10,7 +10,7 @@
 # 开屏广告
 ^https:\/\/api\.xiaoheihe\.cn\/account\/get_ads_info_v2 url reject-dict
 # 移除热点板块信息流广告
-^https:\/\/api\.xiaoheihe\.cn\/bbs\/app\/feeds\/news url script-response-body '.result.links |= map(if .content_type == 27 then del(.title, .ad_pm, .img_gif, .idea_id, .ad_report, .label, .source, .intranet_only, .ad_cm, .content_type, .protocol, .img, .ad_ratio) else . end)'
+^https:\/\/api\.xiaoheihe\.cn\/bbs\/app\/feeds\/news url response-body '.result.links |= map(if .content_type == 27 then del(.title, .ad_pm, .img_gif, .idea_id, .ad_report, .label, .source, .intranet_only, .ad_cm, .content_type, .protocol, .img, .ad_ratio) else . end)'
 
 [Mitm]
 hostname = api.xiaoheihe.cn
