--- a/Rewrite/XiaoHeiHe.conf
+++ b/Rewrite/XiaoHeiHe.conf
@@ -4,13 +4,13 @@
 #!author = 可莉🅥
 #!homepage = https://gitlab.com/lodepuly/vpn_tool/-/tree/master/Tool/Loon/Plugin
 #!icon = https://gitlab.com/lodepuly/iconlibrary/-/raw/main/App_icon/120px/XiaoHeiHe.png
-#!date = 2025-03-08 12:11:15
+#!date = 2024-07-11 07:58:15
 
 [rewrite_local]
 # 开屏广告
 ^https:\/\/api\.xiaoheihe\.cn\/account\/get_ads_info_v2 url reject-dict
 # 移除热点板块信息流广告
-^https:\/\/api\.xiaoheihe\.cn\/bbs\/app\/feeds\/news url response-body '.result.links |= map(if .content_type == 27 then del(.title, .ad_pm, .img_gif, .idea_id, .ad_report, .label, .source, .intranet_only, .ad_cm, .content_type, .protocol, .img, .ad_ratio) else . end)'
+^https:\/\/api\.xiaoheihe\.cn\/bbs\/app\/feeds\/news url script-response-body https://kelee.one/Resource/Script/XiaoHeiHe/XiaoHeiHe_remove_ads.js
 
 [Mitm]
 hostname = api.xiaoheihe.cn
