--- a/Rule/PT.yaml
+++ b/Rule/PT.yaml
@@ -1,6 +1,7 @@
 payload:
   - DOMAIN-SUFFIX,skyey2.com
   - DOMAIN-SUFFIX,skyey.win
+  - DOMAIN-SUFFIX,skyeysnow.com
   - DOMAIN-SUFFIX,soulvoice.club
   - DOMAIN-SUFFIX,m-team.cc
   - DOMAIN-SUFFIX,m-team.io
