Update Coolapk & BaiduCloud
Signed-off-by: 7ongOrz <32224938+7ongOrz@users.noreply.github.com>

--- a/Rewrite/Coolapk.conf
+++ b/Rewrite/Coolapk.conf
@@ -11,3 +11,5 @@ hostname = api.coolapk.com
 ^https?:\/\/api.coolapk.com\/v6\/feed\/detail url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/coolapk.js
 # > 酷安_屏蔽热词@ddgksf2013
 ^https?:\/\/api\.coolapk\.com\/v6\/search\?.*type=hotSearch url reject-dict
+# > 酷安_酷品页推广@ddgksf2013
+^https?:\/\/api.coolapk.com\/v6\/page\/dataList\?.*title=%E9%85%B7%E5%93%81 url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/coolapk.js
